major changes to xmonad.hs
- added autocompletion for cabal (not working too well atm)
- tuned parameters for pgp signatures in gpg.rc
- added vim-visual-increment
- tuned vimwiki parameters
- tuned dzen2 configuration in xmonad
- trimmed down xmonad.hs to remove unneeded dependencies
- made firefox the default browser (added keybinding)

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .*.un\~
 *\~
 xmonad.symlink/xmonad-x86_64-linux
+xmonad.symlink/wallpaper*
 xmonad.symlink/xmonad.errors
 xmonad.symlink/xmonad.hi
 xmonad.symlink/xmonad.o
